# photo_saver

./: CMakeLists.txt  bordering_buffer.h  bordering_buffer.ipp  main.cpp  records_exporter.h  records_exporter.ipp
curl_wrapper/: curl.cpp  curl.h
